GNOME Bugzilla – Bug 776141
glimagesink: RGB png files don't work on raspberry pi (RGBA is fine)
Last modified: 2016-12-19 21:39:03 UTC
Created attachment 342030 [details] Images and minimal player Using master on raspbian, RGB pngs don't display, there is just a black screen. Attachment zip includes minimal python player and the two png files that demonstrate the issue.
Created attachment 342031 [details] rgb log (does not display)
Created attachment 342032 [details] rgba log (displays)
Also reproducible with videotestsrc ! video/x-raw,format=RGB ! glimagesink on the RPi but not on my linux desktop.
This may explain why I couldn't display any jpegs on the Pi.
I've made a test program that demonstrates this and other bugs available here https://github.com/stuaxo/gstreamer-dispmanx-demo
commit d8d28e4426009a8d73308ea1869ca5c95ae27c89 Author: Matthew Waters <matthew@centricular.com> Date: Sat Dec 17 01:00:00 2016 +1100 gl/format: use the unsized format for RGB on GLES2 In GLES2 GL_RGB8 doesn't exist so we cannot use it, use GL_RGB instead. https://bugzilla.gnome.org/show_bug.cgi?id=776141
*** Bug 776165 has been marked as a duplicate of this bug. ***
Tested and works, awesome! Thanks for fixing this :)