gst-libs/gst/gl/gstglformat.c
@@ -277,7 +277,8 @@ gst_gl_sized_gl_format_from_gl_format_type (GstGLContext * context,
     case GST_GL_RGB:
       switch (type) {
         case GL_UNSIGNED_BYTE:
-          return GST_GL_RGB8;
+          return USING_GLES2 (context)
+              && !USING_GLES3 (context) ? GST_GL_RGB : GST_GL_RGB8;
           break;
         case GL_UNSIGNED_SHORT_5_6_5:
           return GST_GL_RGB;
